# Groupe-6---Proj-Devops-agile-methods

./: README.md  azure-pipelines-2.yml  azure-pipelines.yml  azure_devops.py  dashboard.py  logger.py  logique.py  main.py  notifier.py  requirements.txt  secrets.py  test_calculatrice.py  test_logique.py
.github/workflows/: python-ci.yml
Groupe-6---Proj-Devops-agile-methods/: README.md  main.py  test_calculatrice.py
hello_utils/: pyproject.toml
